--- a/archives/toutiao-search/2024-01-14.md
+++ b/archives/toutiao-search/2024-01-14.md
@@ -1,67 +1,78 @@
 # 2024-01-14
 
-共 113 条
+共 121 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Jan 14 2024 04:00:51 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Jan 14 2024 05:00:37 GMT+0800 (China Standard Time) -->
 1. [国台办回应台湾地区选举结果](https://so.toutiao.com/search?keyword=国台办回应台湾地区选举结果)
 1. [英国防部通报攻击也门胡塞武装目标](https://so.toutiao.com/search?keyword=英国防部通报攻击也门胡塞武装目标)
 1. [数读2023年外贸“成绩单”](https://so.toutiao.com/search?keyword=数读2023年外贸“成绩单”)
 1. [外交部发言人就台湾选举答记者问](https://so.toutiao.com/search?keyword=外交部发言人就台湾选举答记者问)
 1. [卢卡申科：世界正处于重大事件前夜](https://so.toutiao.com/search?keyword=卢卡申科：世界正处于重大事件前夜)
 1. [刘德华下个月就要去超市上班了](https://so.toutiao.com/search?keyword=刘德华下个月就要去超市上班了)
-1. [女子在哈尔滨打车要求打表被赶下车](https://so.toutiao.com/search?keyword=女子在哈尔滨打车要求打表被赶下车)
+1. [杭州548户居民自掏5亿重建小区](https://so.toutiao.com/search?keyword=杭州548户居民自掏5亿重建小区)
 1. [亚洲杯揭幕战90分钟观众基本走光](https://so.toutiao.com/search?keyword=亚洲杯揭幕战90分钟观众基本走光)
 1. [河南文旅辟谣召集180男青年速回](https://so.toutiao.com/search?keyword=河南文旅辟谣召集180男青年速回)
 1. [海南一居民家中出现五爪金龙](https://so.toutiao.com/search?keyword=海南一居民家中出现五爪金龙)
 1. [车厘子和樱桃到底有啥区别](https://so.toutiao.com/search?keyword=车厘子和樱桃到底有啥区别)
+1. [女子在哈尔滨打车要求打表被赶下车](https://so.toutiao.com/search?keyword=女子在哈尔滨打车要求打表被赶下车)
 1. [美国三大芯片巨头被曝又遭施压](https://so.toutiao.com/search?keyword=美国三大芯片巨头被曝又遭施压)
+1. [媒体专访王迅](https://so.toutiao.com/search?keyword=媒体专访王迅)
 1. [杨幂青花瓷露背旗袍](https://so.toutiao.com/search?keyword=杨幂青花瓷露背旗袍)
-1. [一套设备3520万 院长拿回扣1600万](https://so.toutiao.com/search?keyword=一套设备3520万+院长拿回扣1600万)
-1. [大学生“花young”寒假](https://so.toutiao.com/search?keyword=大学生“花young”寒假)
 1. [煤老板们抄底被甩卖的五星级酒店](https://so.toutiao.com/search?keyword=煤老板们抄底被甩卖的五星级酒店)
-1. [男子玩游戏充值十几万后被平台禁言](https://so.toutiao.com/search?keyword=男子玩游戏充值十几万后被平台禁言)
-1. [林允红毯裙子崩开了](https://so.toutiao.com/search?keyword=林允红毯裙子崩开了)
-1. [谭爷爷和花花已经相处2年了](https://so.toutiao.com/search?keyword=谭爷爷和花花已经相处2年了)
-1. [马伊琍拍繁花三年没见过游本昌](https://so.toutiao.com/search?keyword=马伊琍拍繁花三年没见过游本昌)
-1. [复兴号智能动车组开进青藏高原](https://so.toutiao.com/search?keyword=复兴号智能动车组开进青藏高原)
-1. [被困萌娃开门先奔向消防员要抱抱](https://so.toutiao.com/search?keyword=被困萌娃开门先奔向消防员要抱抱)
-1. [埃及否认苏伊士运河暂停通行传闻](https://so.toutiao.com/search?keyword=埃及否认苏伊士运河暂停通行传闻)
-1. [马伊琍：玲子深爱阿宝](https://so.toutiao.com/search?keyword=马伊琍：玲子深爱阿宝)
-1. [霍尊疑似复出](https://so.toutiao.com/search?keyword=霍尊疑似复出)
-1. [许多红海过路商船备注有中国船员](https://so.toutiao.com/search?keyword=许多红海过路商船备注有中国船员)
-1. [李玉刚带你云游吉林长春](https://so.toutiao.com/search?keyword=李玉刚带你云游吉林长春)
+1. [一套设备3520万 院长拿回扣1600万](https://so.toutiao.com/search?keyword=一套设备3520万+院长拿回扣1600万)
 1. [经济学家：防止房地产市场超调](https://so.toutiao.com/search?keyword=经济学家：防止房地产市场超调)
-1. [德媒：乌军大挖战壕从进攻转向防御](https://so.toutiao.com/search?keyword=德媒：乌军大挖战壕从进攻转向防御)
-1. [王者荣耀在抖音直播全面开放](https://so.toutiao.com/search?keyword=王者荣耀在抖音直播全面开放)
-1. [马斯克解释第二次星舰试飞失败原因](https://so.toutiao.com/search?keyword=马斯克解释第二次星舰试飞失败原因)
-1. [固态电池突破性进展掀资本市场热浪](https://so.toutiao.com/search?keyword=固态电池突破性进展掀资本市场热浪)
 1. [英媒：西方拒绝中国汽车是一种错误](https://so.toutiao.com/search?keyword=英媒：西方拒绝中国汽车是一种错误)
+1. [吉林省委书记观摩网红带货直播](https://so.toutiao.com/search?keyword=吉林省委书记观摩网红带货直播)
+1. [马伊琍拍繁花三年没见过游本昌](https://so.toutiao.com/search?keyword=马伊琍拍繁花三年没见过游本昌)
+1. [埃及否认苏伊士运河暂停通行传闻](https://so.toutiao.com/search?keyword=埃及否认苏伊士运河暂停通行传闻)
+1. [专家：今年人民币可能出现一轮升值](https://so.toutiao.com/search?keyword=专家：今年人民币可能出现一轮升值)
+1. [林允红毯裙子崩开了](https://so.toutiao.com/search?keyword=林允红毯裙子崩开了)
+1. [许多红海过路商船备注有中国船员](https://so.toutiao.com/search?keyword=许多红海过路商船备注有中国船员)
+1. [霍尊疑似复出](https://so.toutiao.com/search?keyword=霍尊疑似复出)
+1. [李玉刚带你云游吉林长春](https://so.toutiao.com/search?keyword=李玉刚带你云游吉林长春)
+1. [德媒：乌军大挖战壕从进攻转向防御](https://so.toutiao.com/search?keyword=德媒：乌军大挖战壕从进攻转向防御)
+1. [小摩：预计美联储将在4月减缓缩表](https://so.toutiao.com/search?keyword=小摩：预计美联储将在4月减缓缩表)
+1. [女生哈尔滨雪场滑雪被男子撞趴骨折](https://so.toutiao.com/search?keyword=女生哈尔滨雪场滑雪被男子撞趴骨折)
+1. [王者荣耀在抖音直播全面开放](https://so.toutiao.com/search?keyword=王者荣耀在抖音直播全面开放)
+1. [男子玩游戏充值十几万后被平台禁言](https://so.toutiao.com/search?keyword=男子玩游戏充值十几万后被平台禁言)
+1. [名记：罗马没有与穆里尼奥谈过续约](https://so.toutiao.com/search?keyword=名记：罗马没有与穆里尼奥谈过续约)
+1. [固态电池突破性进展掀资本市场热浪](https://so.toutiao.com/search?keyword=固态电池突破性进展掀资本市场热浪)
+1. [Xiaomi SU7真车现场体验](https://so.toutiao.com/search?keyword=Xiaomi+SU7真车现场体验)
+1. [华尔街多家银行预计利息收入已见顶](https://so.toutiao.com/search?keyword=华尔街多家银行预计利息收入已见顶)
+1. [沈阳志愿者教小豫米学东北话](https://so.toutiao.com/search?keyword=沈阳志愿者教小豫米学东北话)
+1. [龙年茅台发售仅5天价格几近腰斩](https://so.toutiao.com/search?keyword=龙年茅台发售仅5天价格几近腰斩)
+1. [男子称买到2022年产的辣条索赔1万](https://so.toutiao.com/search?keyword=男子称买到2022年产的辣条索赔1万)
+1. [“百花迎春”大联欢彰显文艺新气象](https://so.toutiao.com/search?keyword=“百花迎春”大联欢彰显文艺新气象)
+1. [被困萌娃开门先奔向消防员要抱抱](https://so.toutiao.com/search?keyword=被困萌娃开门先奔向消防员要抱抱)
+1. [“愤怒的小鸟”冰上版](https://so.toutiao.com/search?keyword=“愤怒的小鸟”冰上版)
+1. [这三类群体是抑郁症重点关注对象](https://so.toutiao.com/search?keyword=这三类群体是抑郁症重点关注对象)
+1. [零跑中大型SUV C16将于4月25日发布](https://so.toutiao.com/search?keyword=零跑中大型SUV+C16将于4月25日发布)
+1. [俄媒：哈尔滨如何做到成功逆袭](https://so.toutiao.com/search?keyword=俄媒：哈尔滨如何做到成功逆袭)
+1. [东北游客在广西品尝“活血”](https://so.toutiao.com/search?keyword=东北游客在广西品尝“活血”)
+1. [记者路遇货车起火 拎起灭火器救火](https://so.toutiao.com/search?keyword=记者路遇货车起火+拎起灭火器救火)
+1. [马斯克解释第二次星舰试飞失败原因](https://so.toutiao.com/search?keyword=马斯克解释第二次星舰试飞失败原因)
+1. [谭爷爷和花花已经相处2年了](https://so.toutiao.com/search?keyword=谭爷爷和花花已经相处2年了)
+1. [网友在西安拍下央视转播车已到达](https://so.toutiao.com/search?keyword=网友在西安拍下央视转播车已到达)
+1. [大学生“花young”寒假](https://so.toutiao.com/search?keyword=大学生“花young”寒假)
+1. [复兴号智能动车组开进青藏高原](https://so.toutiao.com/search?keyword=复兴号智能动车组开进青藏高原)
+1. [马伊琍：玲子深爱阿宝](https://so.toutiao.com/search?keyword=马伊琍：玲子深爱阿宝)
 1. [一文速览2024全国卫生健康工作重点](https://so.toutiao.com/search?keyword=一文速览2024全国卫生健康工作重点)
 1. [终于等到涉过愤怒的海上线抖音](https://so.toutiao.com/search?keyword=终于等到涉过愤怒的海上线抖音)
 1. [张小帆已任济南市正局级领导职务](https://so.toutiao.com/search?keyword=张小帆已任济南市正局级领导职务)
 1. [吉林市：将开发人造雾凇景观](https://so.toutiao.com/search?keyword=吉林市：将开发人造雾凇景观)
-1. [小摩：预计美联储将在4月减缓缩表](https://so.toutiao.com/search?keyword=小摩：预计美联储将在4月减缓缩表)
-1. [龙年茅台发售仅5天价格几近腰斩](https://so.toutiao.com/search?keyword=龙年茅台发售仅5天价格几近腰斩)
 1. [95后外卖小哥回应3年赚102万元](https://so.toutiao.com/search?keyword=95后外卖小哥回应3年赚102万元)
 1. [程前说打不过就加入被婉拒](https://so.toutiao.com/search?keyword=程前说打不过就加入被婉拒)
 1. [《你也有今天》全员助攻“瑶钱树”](https://so.toutiao.com/search?keyword=《你也有今天》全员助攻“瑶钱树”)
-1. [女生哈尔滨雪场滑雪被男子撞趴骨折](https://so.toutiao.com/search?keyword=女生哈尔滨雪场滑雪被男子撞趴骨折)
-1. [男子称买到2022年产的辣条索赔1万](https://so.toutiao.com/search?keyword=男子称买到2022年产的辣条索赔1万)
-1. [华尔街多家银行预计利息收入已见顶](https://so.toutiao.com/search?keyword=华尔街多家银行预计利息收入已见顶)
-1. [俄媒：哈尔滨如何做到成功逆袭](https://so.toutiao.com/search?keyword=俄媒：哈尔滨如何做到成功逆袭)
 1. [花旗集团将推进裁员2万人的计划](https://so.toutiao.com/search?keyword=花旗集团将推进裁员2万人的计划)
 1. [利好不断 出入境旅游复苏进行时](https://so.toutiao.com/search?keyword=利好不断+出入境旅游复苏进行时)
 1. [以方发言时国际法院法官疑似打瞌睡](https://so.toutiao.com/search?keyword=以方发言时国际法院法官疑似打瞌睡)
-1. [名记：罗马没有与穆里尼奥谈过续约](https://so.toutiao.com/search?keyword=名记：罗马没有与穆里尼奥谈过续约)
 1. [高校18岁女生坠亡 家属发声](https://so.toutiao.com/search?keyword=高校18岁女生坠亡+家属发声)
 1. [俄罗斯国防部：摧毁乌克兰军工设施](https://so.toutiao.com/search?keyword=俄罗斯国防部：摧毁乌克兰军工设施)
 1. [为了画江湖第七季看不良帅](https://so.toutiao.com/search?keyword=为了画江湖第七季看不良帅)
 1. [被杭州这个小铜像浪漫到了](https://so.toutiao.com/search?keyword=被杭州这个小铜像浪漫到了)
-1. [Xiaomi SU7真车现场体验](https://so.toutiao.com/search?keyword=Xiaomi+SU7真车现场体验)
 1. [年关将至成都腊味从这条街香飘全国](https://so.toutiao.com/search?keyword=年关将至成都腊味从这条街香飘全国)
 1. [哈尔滨：爱了你的“新花样”](https://so.toutiao.com/search?keyword=哈尔滨：爱了你的“新花样”)
-1. [东北游客在广西品尝“活血”](https://so.toutiao.com/search?keyword=东北游客在广西品尝“活血”)
 1. [男子被同事叫去担保 自己成借款人](https://so.toutiao.com/search?keyword=男子被同事叫去担保+自己成借款人)
 1. [深深房起诉恒大](https://so.toutiao.com/search?keyword=深深房起诉恒大)
 1. [宝马5系540车型不再供应中国市场](https://so.toutiao.com/search?keyword=宝马5系540车型不再供应中国市场)
@@ -94,7 +105,6 @@
 1. [零跑C10定档3月1日上市](https://so.toutiao.com/search?keyword=零跑C10定档3月1日上市)
 1. [福建一小区突发火灾现场浓烟滚滚](https://so.toutiao.com/search?keyword=福建一小区突发火灾现场浓烟滚滚)
 1. [药商卖9000万药品 院长收900万回扣](https://so.toutiao.com/search?keyword=药商卖9000万药品+院长收900万回扣)
-1. [专家：今年人民币可能出现一轮升值](https://so.toutiao.com/search?keyword=专家：今年人民币可能出现一轮升值)
 1. [唐嫣蹲着和游本昌说话](https://so.toutiao.com/search?keyword=唐嫣蹲着和游本昌说话)
 1. [爵士3人20+擒猛龙取4连胜](https://so.toutiao.com/search?keyword=爵士3人20+擒猛龙取4连胜)
 1. [大部门大警种制改革带来了哪些变化](https://so.toutiao.com/search?keyword=大部门大警种制改革带来了哪些变化)
@@ -113,8 +123,6 @@
 1. [文班亚马26+11 马刺36分大胜黄蜂](https://so.toutiao.com/search?keyword=文班亚马26+11+马刺36分大胜黄蜂)
 1. [白鹿陈哲远同框好亮眼](https://so.toutiao.com/search?keyword=白鹿陈哲远同框好亮眼)
 1. [如何及时发现药物导致的肝损伤](https://so.toutiao.com/search?keyword=如何及时发现药物导致的肝损伤)
-1. [“百花迎春”大联欢彰显文艺新气象](https://so.toutiao.com/search?keyword=“百花迎春”大联欢彰显文艺新气象)
 1. [沈腾力荐来齐齐哈尔吃烤肉看仙鹤](https://so.toutiao.com/search?keyword=沈腾力荐来齐齐哈尔吃烤肉看仙鹤)
 1. [广东肇庆市原副市长陈家添被双开](https://so.toutiao.com/search?keyword=广东肇庆市原副市长陈家添被双开)
-1. [网友在西安拍下央视转播车已到达](https://so.toutiao.com/search?keyword=网友在西安拍下央视转播车已到达)
 <!-- END TOUTIAO -->
